<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/imgBack"
            android:padding="15dp"
            android:src="@drawable/ic_keyboard_backspace_white_24dp"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent"/>

        <TextView
            android:text="@string/app_name"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/imgDone"
            android:padding="15dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_done_white_48dp"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent"/>
    </FrameLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:paddingHorizontal="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="35dp">
        <TextView
            android:id="@+id/tvCompany"
            android:text="@string/company"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:background="@drawable/bg_non_selected"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tvSearch"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/search"
            android:background="@drawable/bg_selected"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpOrganization"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>