<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:src="@drawable/sidebar_ic_06" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/app_name"
            android:textColor="@color/app_base_color"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/custom_dialog_confirm_draft" />

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minHeight="100dp"
        android:padding="@dimen/padding_normal"
        android:textColor="@android:color/black"
        android:textSize="18dp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/custom_dialog_confirm_draft_ccc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_normal"
            android:text="@string/yes_draft"
            android:textColor="@color/app_base_color"
            android:textStyle="bold" />

        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="@color/custom_dialog_confirm_draft_ccc" />

        <TextView
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_normal"
            android:text="@string/cancle_draft"
            android:textAllCaps="false"
            android:textColor="@color/app_base_color"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/custom_dialog_confirm_draft_ccc" />
</LinearLayout>